[workspace]
resolver = "3"
members = ["crates/*"]
default-members = ["crates/ryu"]

[workspace.package]
version = "0.0.1"
authors = ["Ric's Dev <ricsdev@proton.me>"]
edition = "2024"
repository = "https://codeberg.org/RicsDev/Ryu.git"
description = ""

[workspace.dependencies]
clap = { version = "4.6.1", features = ["derive"] }
color-eyre = { version = "0.6.5", features = ["tracing-error"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
dirs = "6.0.0"
fff-search = "0.6.4"
futures = "0.3.32"
notify = "8.2.0"
ratatui = "0.30.0"
rhai = "1.24.0"
ropey = "1.6.1"
similar = "3.1.0" # Diff algorithms 
tokio = { version = "1.52.1", features = ["full"] }
tree-sitter = "0.26.8"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-appender = "0.2.5"
tracing-error = "0.2.1"
unicode-segmentation = "1.13.2" # uses graphemes clusters - Knowing where grapheme boundaries are
unicode-width = "0.2.2"

[workspace.lints.rust]
unsafe_code = "deny"
# missing_docs = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.release]
opt-level = 3
strip = "symbols"
lto = "fat"
panic = "abort"
codegen-units = 1

[profile.release-debug]
inherits = "release"
debug = true
strip = "none"
