[package]
name = "ryu-editor"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
ryu-core = { path = "../ryu-core" }
ryu-ui = { path = "../ryu-ui" }
color-eyre.workspace = true
crossterm.workspace = true
futures.workspace = true
ratatui.workspace = true
tokio.workspace = true
unicode-width.workspace = true

[lints]
workspace = true
